# Old-Smart-Mirror

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  constants.hpp  hello_arpan.cpp  jarvis.cpp
inc/: constants.hpp  hello_arpan.hpp  triangleWidget.hpp  weatherWidget.hpp  widget.hpp
src/: CMakeLists.txt  triangleWidget.cpp  weatherWidget.cpp  widget.cpp
